kubernetes/ingress/ingress-yuyang-go-labworlds-cc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-yuyang-go-starter-labworlds-cc
  namespace: yuyang
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - yuyang.go.labworlds.cc
    secretName: yuyang-go-starter-labworlds-cc
  rules:
  - host: yuyang.go.labworlds.cc
    http:
      paths:
      - path: /go(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-go-starter
            port:
              number: 8080
